Inclusão dos testes da API
